// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic textarea 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  />
</div>
`;

exports[`renders correctly for a disabled textarea 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    disabled=""
    rows="3"
    type="text"
  />
</div>
`;

exports[`renders correctly for a full width textarea 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  />
</div>
`;

exports[`renders correctly for a textarea with a placeholder 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    placeholder="Awesome placeholder"
    rows="3"
    type="text"
  />
</div>
`;

exports[`renders correctly for an input with a default value 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  >
    Awesome value
  </textarea>
</div>
`;

exports[`sizes renders correctly for a textarea with size large 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

.c1 {
  font-size: 1.5rem;
}

.c1 + .c3 {
  top: 16px;
  right: 12px;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  />
</div>
`;

exports[`sizes renders correctly for a textarea with size medium 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

.c1 {
  font-size: 1.25rem;
}

.c1 + .c3 {
  top: 15px;
  right: 10px;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  />
</div>
`;

exports[`sizes renders correctly for a textarea with size small 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

.c1 {
  font-size: 0.8rem;
}

.c1 + .c3 {
  top: 10px;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  />
</div>
`;

exports[`states renders correctly for a textarea with state danger 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

.c1 {
  border-color: #d97c82;
  box-shadow: #d97c82 0px 0px 0px 1px !important;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="true"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  />
</div>
`;

exports[`states renders correctly for a textarea with state primary 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

.c1 {
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  />
</div>
`;

exports[`states renders correctly for a textarea with state success 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

.c1 {
  border-color: #6ba886;
  box-shadow: #6ba886 0px 0px 0px 1px !important;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  />
</div>
`;

exports[`states renders correctly for a textarea with state warning 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0.c0.c0 {
  position: relative;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c1[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c1:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c1::-webkit-input-placeholder {
  opacity: 0.6;
}

.c1::-moz-placeholder {
  opacity: 0.6;
}

.c1:-ms-input-placeholder {
  opacity: 0.6;
}

.c1::placeholder {
  opacity: 0.6;
}

.c1 {
  border-color: #f5bd4c;
  box-shadow: #f5bd4c 0px 0px 0px 1px !important;
}

<div
  class="c0"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c1 c2"
    rows="3"
    type="text"
  />
</div>
`;
